Added: logout [lab-08]
