# backend/src/docs/swagger.yaml
@@ -1106,6 +1106,35 @@ paths:
       summary: Login an Account
       tags:
       - Account
+  /logout:
+    get:
+      consumes:
+      - application/json
+      description: get Account
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.Account'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Logout Account
+      tags:
+      - Account
   /patients:
     get:
       consumes:
