# backend/src/internal/modules/view/rest-api/api.go
@@ -18,10 +18,10 @@ import (
 func CORSMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
 
-		c.Header("Access-Control-Allow-Origin", "*")
+		c.Header("Access-Control-Allow-Origin", "http://localhost:3000")
 		c.Header("Access-Control-Allow-Credentials", "true")
 		c.Header("Access-Control-Allow-Headers", "Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization, accept, origin, Cache-Control, X-Requested-With")
-		c.Header("Access-Control-Allow-Methods", "POST,HEAD,PATCH, OPTIONS, GET, PUT")
+		c.Header("Access-Control-Allow-Methods", "GET, POST, OPTIONS, PUT, DELETE")
 
 		if c.Request.Method == "OPTIONS" {
 			c.AbortWithStatus(204)
@@ -111,6 +111,7 @@ func api(controller *controller.Controller, cfg config.Config, logger *zap.Logge
 
 		v1.POST("/login", c.LoginAccount)
 		v1.GET("/authcheck", c.AuthCheck)
+		v1.GET("/logout", c.Logout)
 
 		doctorsPatients := v1.Group("/doctorsPatients")
 		{
